<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:context=".ui.museum.DetailMuseumActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/nama_museum"/>

    <TextView
        android:id="@+id/detail_museum_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/museum_indonesia_keren_banget"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/alamat"/>

    <TextView
        android:id="@+id/detail_museum_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/museum_indonesia_keren_banget"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/kabupaten"/>

    <TextView
        android:id="@+id/detail_museum_kabupaten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/museum_indonesia_keren_banget"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/kecamatan"/>

    <TextView
        android:id="@+id/detail_museum_kecamatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/museum_indonesia_keren_banget"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="13sp"
        android:text="@string/provinsi"/>

    <TextView
        android:id="@+id/detail_museum_provinsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/museum_indonesia_keren_banget"/>

</LinearLayout>