<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".ui.daerah.DaerahActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/provinsi"/>

    <Spinner
        android:id="@+id/provinsi_spinner"
        android:layout_width="match_parent"
        android:background="@color/colorYellow"
        android:layout_height="50dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/kabupaten"/>

    <Spinner
        android:id="@+id/kabupaten_spinner"
        android:layout_width="match_parent"
        android:background="@color/colorPink"
        android:layout_height="50dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/kecamatan"/>

    <Spinner
        android:id="@+id/kecamatan_spinner"
        android:layout_width="match_parent"
        android:background="@color/colorOrange"
        android:layout_height="50dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/kelurahan"/>

    <Spinner
        android:id="@+id/kelurahan_spinner"
        android:layout_width="match_parent"
        android:background="@color/colorYellow"
        android:layout_height="50dp"/>

</LinearLayout>