<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/white"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:id="@+id/linear_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/menu_cv_batik"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:cardCornerRadius="20dp"
            android:layout_marginEnd="5dp"
            app:cardElevation="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/batik"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="19sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/batik_indonesia"/>

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/menu_cv_museum"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:cardElevation="0dp"
            android:layout_marginStart="5dp"
            app:cardCornerRadius="20dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/museum"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="19sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/museum_nindonesia"/>

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/linear_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/menu_cv_daerah"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:cardCornerRadius="20dp"
            android:layout_marginEnd="5dp"
            app:cardElevation="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/daerah"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="19sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/daerah_nindonesia"/>

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/menu_cv_covid"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:cardElevation="0dp"
            android:layout_marginStart="5dp"
            app:cardCornerRadius="20dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/covid"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="19sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/info_covid_19_nindonesia"/>

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>