<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.covid.DetailCovidActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:ignore="UselessParent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="120dp"
               app:cardCornerRadius="15dp"
               app:cardBackgroundColor="@color/colorYellow">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="16dp"
                   android:orientation="vertical">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/sembuh"
                       android:textSize="40sp"
                       android:textStyle="bold"/>

                   <TextView
                       android:id="@+id/detail_covid_sembuh"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       tools:text="198 Orang"
                       android:textSize="20sp"
                       android:textStyle="bold"/>

               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="120dp"
               app:cardCornerRadius="15dp"
               app:cardBackgroundColor="@color/colorYellow">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="16dp"
                   android:orientation="vertical">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/meninggal"
                       android:textSize="40sp"
                       android:textStyle="bold"/>

                   <TextView
                       android:id="@+id/detail_covid_meninggal"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       tools:text="198 Orang"
                       android:textSize="20sp"
                       android:textStyle="bold"/>

               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="120dp"
               app:cardCornerRadius="15dp"
               app:cardBackgroundColor="@color/colorYellow">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="16dp"
                   android:orientation="vertical">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/dalam_perawatan"
                       android:textSize="40sp"
                       android:textStyle="bold"/>

                   <TextView
                       android:id="@+id/detail_covid_rawat"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       tools:text="198 Orang"
                       android:textSize="20sp"
                       android:textStyle="bold"/>

               </LinearLayout>

           </androidx.cardview.widget.CardView>

       </LinearLayout>

    </ScrollView>

</LinearLayout>